# nsys-ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  test_agent.py
.github/workflows/: ci.yml
agent/: README.md
docs/: future-cache-optimization.md
examples/example-10-fastvideo-inference/: download_data.py
examples/example-20-megatron-distca/: download_data.py
scripts/: functional_test_tree.py
site/: index.html
src/nsys_ai/: __main__.py  chat.py  diff.py  diff_tools.py  evidence_builder.py  exceptions.py  export.py  indexing.py  main_page.py  nvtx_attribution.py  nvtx_tree.py  profile.py  prompt_loader.py  region_mfu.py  summary.py  tui_textual.py  tui_timeline.py  viewer.py  web.py
src/nsys_ai/agent/: __init__.py  loop.py  persona.md  persona.py
src/nsys_ai/ai/: __init__.py  annotator.py  gate.py
src/nsys_ai/cli/: app.py  handlers.py
src/nsys_ai/skills/: __init__.py  base.py  registry.py
src/nsys_ai/templates/: nvtx_tree.html  timeline.html  timeline.js
src/nsys_ai/timeline/: __init__.py  app.py  canvas.py  logic.py  widgets.py
src/nsys_ai/tree/: __init__.py  app.py  logic.py  widgets.py
src/nsys_tui/: __init__.py  __main__.py  chat.py  chat_config.py  chat_tools.py  export_flat.py  formatting.py  main_page.py  nvtx_tree.py  overlap.py  profile.py  projection.py  report.py  search.py  tools_profile.py  tree.py  tui.py  tui_actions.py  tui_models.py  tui_textual.py  tui_timeline.py  viewer.py  web.py
src/nsys_tui/agent/: __init__.py
src/nsys_tui/ai/: analyzer.py  annotator.py
src/nsys_tui/skills/: __init__.py  registry.py
src/nsys_tui/templates/: timeline.html
src/nsys_tui/timeline/: app.py  canvas.py
src/nsys_tui/tree/: chat.py
tests/: conftest.py  test_agent.py  test_chat.py  test_chat_gemini.py  test_chat_two_requests_backend.py  test_cli.py  test_exceptions.py  test_integration.py  test_profile_resolve.py  test_skills.py  test_timeline_logic.py  test_timeline_web_data.py  test_timeline_web_distca_profile.py  test_tools_profile.py  test_trajectories.py  test_tree_logic.py  test_tui_snapshots.py  test_tui_timeline_app.py  test_tui_tree_app.py
tests/trajectories/: README.md
tests/trajectories/A_absolute/: q001.json  q002.json  q003.json  q004.json  q005.json  q006.json  q007.json  q008.json  q009.json  q010.json  q011.json  q012.json  q013.json  q014.json  q015.json  q016.json  q017.json  q018.json  q019.json  q020.json
tests/trajectories/B_iteration/: q021.json  q022.json  q023.json  q024.json  q025.json  q026.json  q027.json  q028.json  q029.json  q030.json  q031.json  q032.json  q033.json  q034.json  q035.json  q036.json  q037.json  q038.json  q039.json  q040.json
tests/trajectories/C_bottleneck/: q041.json  q042.json  q043.json  q044.json  q045.json  q046.json  q047.json  q048.json  q049.json  q050.json  q051.json  q052.json  q053.json  q054.json  q055.json  q056.json  q057.json  q058.json  q059.json  q060.json
tests/trajectories/D_nccl/: q061.json  q062.json  q063.json  q064.json  q065.json  q066.json  q067.json  q068.json  q069.json  q070.json  q071.json  q072.json  q073.json  q074.json  q075.json  q076.json  q077.json  q078.json  q079.json  q080.json
tests/trajectories/E_streams/: q081.json  q082.json  q083.json  q084.json  q085.json  q086.json  q087.json  q088.json  q089.json  q090.json  q091.json  q092.json  (+8 more)
(+40 files in other folders)
