[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsys-ai"
version = "0.2.1"
description = "AI-powered analysis for NVIDIA Nsight Systems profiles — web viewer, timeline, kernel navigator, NVTX hierarchy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
]
authors = [
    {name = "GindaChen"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.scripts]
nsys-ai = "nsys_ai.__main__:main"

[project.optional-dependencies]
agent = ["anthropic>=0.20.0", "litellm>=1.0.0"]
ai = ["anthropic>=0.20.0", "litellm>=1.0.0"]  # backward compat alias
tui = ["textual>=8.0.0"]                        # Textual TUI (tree + timeline + chat)
chat = ["litellm>=1.0.0", "nsys-ai[tui]"]       # AI chat TUI (requires tui)
dev = ["pytest>=7.0", "ruff>=0.4.0", "pytest-textual-snapshot>=1.1.0", "pytest-asyncio>=0.23"]
all = ["nsys-ai[agent,tui,chat]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nsys_ai = ["templates/*.html"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",  # line-too-long — handled by formatter, not hard error
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long fixture strings are acceptable in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
# B110: try_except_pass; B608: param to run(); B404/B603: suppressed at call site in profile.py via # nosec
skips = ["B110", "B608"]
